[workspace]
members = ["examples/*"]

[package]
name         = "opentelemetry_gcloud_monitoring_exporter"
version      = "0.22.0"
description  = "Provides support for exporting metrics to Google Cloud Monitoring."
readme       = "README.md"
keywords     = ["exporter", "google-cloud", "metrics", "monitoring", "opentelemetry"]
repository   = "https://github.com/Sergo007/opentelemetry-rust-exporter-gcp-cm"
authors      = ["Yatsina Serhii <yatsyna.sergey@gmail.com>"]
license      = "Apache-2.0"
edition      = "2024"
rust-version = "1.85.0"
exclude      = ["*.sh"]

[lib]
doctest = false

[features]
default = ["tokio"]
tokio   = ["dep:tokio", "opentelemetry_sdk/rt-tokio"]

[dependencies]
opentelemetry                           = { version = "0.31", features = ["metrics"] }
opentelemetry_sdk                       = { version = "0.31", features = ["experimental_metrics_periodicreader_with_async_runtime", "metrics", "spec_unstable_metrics_views"] }
opentelemetry_resourcedetector_gcp_rust = { version = "0.20" }

reqwest = "0.12.28"

# json serializer/deserializer
serde      = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

tokio = { version = "1", features = ["fs", "io-util", "sync", "time"], optional = true }

unicode-segmentation = "1.12.0"
rand                 = "0.9.2"
itertools            = "0.14.0"
tracing              = { version = "0.1.44" }

# gcp monitoring sdk
google-cloud-gax           = "1.4"
google-cloud-wkt           = "1.2"
google-cloud-api           = "1.2"
google-cloud-monitoring-v3 = "1.2"
thiserror                  = "2.0.17"

[dev-dependencies]
once_cell         = "1.21.1"
pretty_assertions = "1.4.1"
# todo contribute to the project to add the sorted feature
pretty_assertions_sorted_fork = { version = "0.10.1" }
tokio                         = { version = "1.0", features = ["full"] }
