[package]
name    = "basic-metrics"
version = "0.1.0"
authors = ["Luca Palmieri <rust@lpalmieri.com>"]
edition = "2018"

license = "MIT/Apache-2.0"

[dependencies]
opentelemetry_gcloud_monitoring_exporter = { path = "../..", features = ["tokio"] }
tokio                                    = { version = "1.0", features = ["full"] }
opentelemetry                            = { version = "0.31", features = ["metrics"] }
opentelemetry_sdk                        = { version = "0.31", features = ["experimental_metrics_periodicreader_with_async_runtime", "metrics", "rt-tokio"] }
opentelemetry_resourcedetector_gcp_rust  = "0.20.0"
# json serializer/deserializer
serde      = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

tracing            = "0.1"
tracing-subscriber = "0.3"
