[package]
name    = "try_monitoring_sdk"
version = "0.1.0"
edition = "2021"

[dependencies]
# tokio
tokio = { version = "1.0", features = ["full"] }
# serde
serde      = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# gcp monitoring sdk
google-cloud-monitoring-v3 = "1.2.0"
google-cloud-api           = "1.2.0"

[dev-dependencies]
once_cell         = "1.21.1"
pretty_assertions = "1.4.1"
# todo contribute to the project to add the sorted feature
pretty_assertions_sorted_fork = { version = "0.10.0" }
tokio                         = { version = "1.0", features = ["full"] }
mockall                       = { default-features = false, version = "0.14" }
